Add faceloop length targets

--- a/code/02DK_basic_statistics.ipynb
+++ b/code/02DK_basic_statistics.ipynb
@@ -619,6 +619,15 @@
     "axes.set_title(\"Face loop lengths\")\n",
     "axes.text(\n",
     "    (FACELOOP_LIMIT[0] + FACELOOP_LIMIT[1]) / 2000,\n",
+    "    max(N) * 1.1,\n",
+    "    \"≥90%\",\n",
+    "    horizontalalignment=\"center\",\n",
+    "    verticalalignment=\"top\",\n",
+    "    color=lighten_color(loop_classification_colors[\"ideal_range\"], 5),\n",
+    "    fontsize=9,\n",
+    ")\n",
+    "axes.text(\n",
+    "    (FACELOOP_LIMIT[0] + FACELOOP_LIMIT[1]) / 2000,\n",
     "    max(N) * 0.1,\n",
     "    str(\n",
     "        round(\n",
@@ -637,6 +646,15 @@
     "    horizontalalignment=\"center\",\n",
     "    verticalalignment=\"top\",\n",
     "    color=lighten_color(loop_classification_colors[\"ideal_range\"], 5),\n",
+    ")\n",
+    "axes.text(\n",
+    "    FACELOOP_LIMIT[0] / 1000 * 0.95,\n",
+    "    max(N) * 1.1,\n",
+    "    \"<10%\",\n",
+    "    horizontalalignment=\"right\",\n",
+    "    verticalalignment=\"top\",\n",
+    "    color=lighten_color(loop_classification_colors[\"too_short\"], 5),\n",
+    "    fontsize=9,\n",
     ")\n",
     "axes.text(\n",
     "    FACELOOP_LIMIT[0] / 1000 * 0.95,\n",
@@ -661,6 +679,15 @@
     ")\n",
     "axes.text(\n",
     "    FACELOOP_LIMIT[1] / 1000 * 1.1,\n",
+    "    max(N) * 1.1,\n",
+    "    \"≈0%\",\n",
+    "    horizontalalignment=\"left\",\n",
+    "    verticalalignment=\"top\",\n",
+    "    color=lighten_color(loop_classification_colors[\"too_long\"], 2.2),\n",
+    "    fontsize=9,\n",
+    ")\n",
+    "axes.text(\n",
+    "    FACELOOP_LIMIT[1] / 1000 * 1.1,\n",
     "    max(N) * 0.1,\n",
     "    str(\n",
     "        round(\n",
@@ -680,14 +707,30 @@
     "    verticalalignment=\"top\",\n",
     "    color=lighten_color(loop_classification_colors[\"too_long\"], 2.2),\n",
     ")\n",
+    "axes.text(\n",
+    "    xmax * 0.95,\n",
+    "    max(N) * 1.1,\n",
+    "    \"Target\",\n",
+    "    horizontalalignment=\"right\",\n",
+    "    verticalalignment=\"top\",\n",
+    "    color=\"#000000\",\n",
+    "    fontsize=9,\n",
+    ")\n",
     "axes.set_xlim([0, xmax])\n",
-    "\n",
-    "# fig.savefig(PATH[\"plot\"] + \"faceloopstats\");\n",
+    "axes.set_ylim([0, 1.08 * axes.get_ylim()[1]])\n",
     "\n",
     "\n",
     "plt.tight_layout()\n",
     "fig.savefig(PATH[\"plot\"] + \"faceloops\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "013a0ae7-153e-4c8d-828b-0ef432676945",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
