Define plot parameters through config.yml
- Polish face loop plot

--- a/code/02DK_basic_statistics.ipynb
+++ b/code/02DK_basic_statistics.ipynb
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-29  \n",
-    "Last modified: 2024-10-22"
+    "Last modified: 2024-10-23"
    ]
   },
   {
@@ -467,11 +467,11 @@
     ")\n",
     "\n",
     "for i in range(0, FACELOOP_LIMIT[0] // 1000):\n",
-    "    patches[i].set_facecolor(loop_classification_colors[\"too_short\"])\n",
+    "    patches[i].set_facecolor(PLOTPARAM[\"loop_classification_colors\"][\"too_short\"])\n",
     "for i in range(FACELOOP_LIMIT[0] // 1000, FACELOOP_LIMIT[1] // 1000):\n",
-    "    patches[i].set_facecolor(loop_classification_colors[\"ideal_range\"])\n",
+    "    patches[i].set_facecolor(PLOTPARAM[\"loop_classification_colors\"][\"ideal_range\"])\n",
     "for i in range(FACELOOP_LIMIT[1] // 1000, len(patches)):\n",
-    "    patches[i].set_facecolor(loop_classification_colors[\"too_long\"])\n",
+    "    patches[i].set_facecolor(PLOTPARAM[\"loop_classification_colors\"][\"too_long\"])\n",
     "\n",
     "\n",
     "axes.set_xlabel(\"Length [km]\")\n",
@@ -496,7 +496,7 @@
     "    + \"%\",\n",
     "    horizontalalignment=\"center\",\n",
     "    verticalalignment=\"top\",\n",
-    "    color=lighten_color(loop_classification_colors[\"ideal_range\"], 4),\n",
+    "    color=lighten_color(PLOTPARAM[\"loop_classification_colors\"][\"ideal_range\"], 4),\n",
     ")\n",
     "axes.text(\n",
     "    FACELOOP_LIMIT[0] / 1000 * 0.95,\n",
@@ -517,7 +517,7 @@
     "    + \"%\",\n",
     "    horizontalalignment=\"right\",\n",
     "    verticalalignment=\"top\",\n",
-    "    color=lighten_color(loop_classification_colors[\"too_short\"], 1.8),\n",
+    "    color=lighten_color(PLOTPARAM[\"loop_classification_colors\"][\"too_short\"], 1.8),\n",
     ")\n",
     "axes.text(\n",
     "    FACELOOP_LIMIT[1] / 1000 * 1.1,\n",
@@ -538,7 +538,7 @@
     "    + \"%\",\n",
     "    horizontalalignment=\"left\",\n",
     "    verticalalignment=\"top\",\n",
-    "    color=lighten_color(loop_classification_colors[\"too_long\"], 2.2),\n",
+    "    color=lighten_color(PLOTPARAM[\"loop_classification_colors\"][\"too_long\"], 2.2),\n",
     ")\n",
     "axes.set_xlim([0, xmax])\n",
     "\n",
@@ -578,14 +578,19 @@
     "    fp = PATH[\"data_out\"] + f\"faceloops_{classification}.gpkg\"\n",
     "    loops[loops[\"length_class\"] == classification].to_file(fp, index=False)\n",
     "\n",
-    "fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(10, 10))\n",
+    "fig = plt.figure(\n",
+    "    figsize=(640 / PLOTPARAM[\"dpi\"], 760 / PLOTPARAM[\"dpi\"]), dpi=PLOTPARAM[\"dpi\"]\n",
+    ")\n",
+    "ax = fig.add_axes(\n",
+    "    [-0.03, -0.03, 1.06, 1.06]\n",
+    ")  # negative because plot() introduces a padding\n",
     "layer_names = []\n",
     "for classification in loops.length_class.unique():\n",
     "    df = gpd.read_file(PATH[\"data_out\"] + f\"faceloops_{classification}.gpkg\")\n",
     "    # df.to_crs(epsg=23032, inplace=True)\n",
     "    df.plot(\n",
     "        ax=ax,\n",
-    "        color=loop_classification_colors[classification],\n",
+    "        color=PLOTPARAM[\"loop_classification_colors\"][classification],\n",
     "        edgecolor=\"#222222\",\n",
     "        aspect=1,\n",
     "        linewidth=0.2,\n",
@@ -594,7 +599,7 @@
     "\n",
     "\n",
     "xmax = 42\n",
-    "axes = fig.add_axes([0.62, 0.68, 0.24, 0.2])\n",
+    "axes = fig.add_axes([0.64, 0.69, 0.31, 0.25])\n",
     "\n",
     "facelooplengths = [c * MPERUNIT / 1000 for c in faceloops.length]\n",
     "\n",
@@ -606,12 +611,13 @@
     "    linewidth=0,\n",
     ")\n",
     "\n",
+    "# Source: https://stackoverflow.com/a/49290555\n",
     "for i in range(0, FACELOOP_LIMIT[0] // 1000):\n",
-    "    patches[i].set_facecolor(loop_classification_colors[\"too_short\"])\n",
+    "    patches[i].set_facecolor(PLOTPARAM[\"loop_classification_colors\"][\"too_short\"])\n",
     "for i in range(FACELOOP_LIMIT[0] // 1000, FACELOOP_LIMIT[1] // 1000):\n",
-    "    patches[i].set_facecolor(loop_classification_colors[\"ideal_range\"])\n",
+    "    patches[i].set_facecolor(PLOTPARAM[\"loop_classification_colors\"][\"ideal_range\"])\n",
     "for i in range(FACELOOP_LIMIT[1] // 1000, len(patches)):\n",
-    "    patches[i].set_facecolor(loop_classification_colors[\"too_long\"])\n",
+    "    patches[i].set_facecolor(PLOTPARAM[\"loop_classification_colors\"][\"too_long\"])\n",
     "\n",
     "\n",
     "axes.set_xlabel(\"Length [km]\")\n",
@@ -623,7 +629,7 @@
     "    \"≥90%\",\n",
     "    horizontalalignment=\"center\",\n",
     "    verticalalignment=\"top\",\n",
-    "    color=lighten_color(loop_classification_colors[\"ideal_range\"], 5),\n",
+    "    color=lighten_color(PLOTPARAM[\"loop_classification_colors\"][\"ideal_range\"], 5),\n",
     "    fontsize=9,\n",
     ")\n",
     "axes.text(\n",
@@ -645,7 +651,7 @@
     "    + \"%\",\n",
     "    horizontalalignment=\"center\",\n",
     "    verticalalignment=\"top\",\n",
-    "    color=lighten_color(loop_classification_colors[\"ideal_range\"], 5),\n",
+    "    color=lighten_color(PLOTPARAM[\"loop_classification_colors\"][\"ideal_range\"], 5),\n",
     ")\n",
     "axes.text(\n",
     "    FACELOOP_LIMIT[0] / 1000 * 0.95,\n",
@@ -653,7 +659,7 @@
     "    \"<10%\",\n",
     "    horizontalalignment=\"right\",\n",
     "    verticalalignment=\"top\",\n",
-    "    color=lighten_color(loop_classification_colors[\"too_short\"], 5),\n",
+    "    color=lighten_color(PLOTPARAM[\"loop_classification_colors\"][\"too_short\"], 5),\n",
     "    fontsize=9,\n",
     ")\n",
     "axes.text(\n",
@@ -675,7 +681,7 @@
     "    + \"%\",\n",
     "    horizontalalignment=\"right\",\n",
     "    verticalalignment=\"top\",\n",
-    "    color=lighten_color(loop_classification_colors[\"too_short\"], 5),\n",
+    "    color=lighten_color(PLOTPARAM[\"loop_classification_colors\"][\"too_short\"], 5),\n",
     ")\n",
     "axes.text(\n",
     "    FACELOOP_LIMIT[1] / 1000 * 1.1,\n",
@@ -683,7 +689,7 @@
     "    \"≈0%\",\n",
     "    horizontalalignment=\"left\",\n",
     "    verticalalignment=\"top\",\n",
-    "    color=lighten_color(loop_classification_colors[\"too_long\"], 2.2),\n",
+    "    color=lighten_color(PLOTPARAM[\"loop_classification_colors\"][\"too_long\"], 2.2),\n",
     "    fontsize=9,\n",
     ")\n",
     "axes.text(\n",
@@ -705,7 +711,7 @@
     "    + \"%\",\n",
     "    horizontalalignment=\"left\",\n",
     "    verticalalignment=\"top\",\n",
-    "    color=lighten_color(loop_classification_colors[\"too_long\"], 2.2),\n",
+    "    color=lighten_color(PLOTPARAM[\"loop_classification_colors\"][\"too_long\"], 2.2),\n",
     ")\n",
     "axes.text(\n",
     "    xmax * 0.95,\n",
@@ -716,21 +722,14 @@
     "    color=\"#000000\",\n",
     "    fontsize=9,\n",
     ")\n",
+    "axes.set_xticks([0, 10, 20, 30, 40])\n",
     "axes.set_xlim([0, xmax])\n",
     "axes.set_ylim([0, 1.08 * axes.get_ylim()[1]])\n",
     "\n",
     "\n",
-    "plt.tight_layout()\n",
+    "# plt.tight_layout()\n",
     "fig.savefig(PATH[\"plot\"] + \"faceloops\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "013a0ae7-153e-4c8d-828b-0ef432676945",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
