Add bornholm delta

--- a/code/00_network_preprocessing.ipynb
+++ b/code/00_network_preprocessing.ipynb
@@ -189,15 +189,23 @@
     "    weights=False,\n",
     "    edge_attrs=[\"weight\", \"edge_id\", \"max_slope\", \"geometry\"],\n",
     ")\n",
+    "if STUDY_AREA == \"bornholm\":\n",
+    "    delta = BORNHOLM_DELTA\n",
+    "    for e in G.es:  # translate edges, below nodes\n",
+    "        G.es[e.index][\"geometry\"] = gpd.GeoSeries(G.es[e.index][\"geometry\"]).translate(\n",
+    "            xoff=delta[0], yoff=delta[1]\n",
+    "        )[0]\n",
+    "else:\n",
+    "    delta = [0, 0]\n",
     "for v in G.vs:  # Add node infos: id_cykelknudepkt, x, y\n",
     "    G.vs[v.index][\"id_cykelknudepkt\"] = nodes.loc[nodes[\"nodeID\"] == v[\"name\"]].iloc[0][\n",
     "        \"id_cykelknudepkt\"\n",
     "    ]\n",
     "    G.vs[v.index][\"x\"] = round(\n",
-    "        nodes.loc[nodes[\"nodeID\"] == v[\"name\"]].iloc[0].geometry.x, 3\n",
+    "        nodes.loc[nodes[\"nodeID\"] == v[\"name\"]].iloc[0].geometry.x + delta[0], 3\n",
     "    )\n",
     "    G.vs[v.index][\"y\"] = round(\n",
-    "        nodes.loc[nodes[\"nodeID\"] == v[\"name\"]].iloc[0].geometry.y, 3\n",
+    "        nodes.loc[nodes[\"nodeID\"] == v[\"name\"]].iloc[0].geometry.y + delta[1], 3\n",
     "    )"
    ]
   },
@@ -209,8 +217,8 @@
    "outputs": [],
    "source": [
     "if debug:\n",
-    "    for v in G.vs[:10]:\n",
-    "        print(v)\n",
+    "    for e in G.es[:10]:\n",
+    "        print(e)\n",
     "G.summary()"
    ]
   },
