--- a/code/01DK_create_loops.ipynb
+++ b/code/01DK_create_loops.ipynb
@@ -109,8 +109,7 @@
     "for subarea in STUDY_AREA_COMBINED[STUDY_AREA]:\n",
     "    with lzma.open(PATH[subarea][\"data_out\"] + \"network_preprocessed.xz\", \"rb\") as f:\n",
     "        G_new = pickle.load(f)\n",
-    "        Gnx_new = G_new.to_networkx()\n",
-    "        Gnx = nx.disjoint_union(Gnx, Gnx_new)\n",
+    "        Gnx = nx.disjoint_union(Gnx, G_new.to_networkx())\n",
     "if debug:\n",
     "    print(\"N: \" + str(Gnx.number_of_nodes()), \", L: \" + str(Gnx.number_of_edges()))\n",
     "    for k, v in list(Gnx.nodes(data=True))[:10]:\n",
