Improve scenario selection in yml

--- a/code/02DK_basic_statistics.ipynb
+++ b/code/02DK_basic_statistics.ipynb
@@ -30,7 +30,7 @@
     "## To do\n",
     "- [X] Plot avg/median loop length per node: network, distribution (for all scenarios)\n",
     "- [X] Plot distrib of length of loops that have nodes == loop_numnode_bound. To see whether we should increase the bound.\n",
-    "- [ ] Visualize link lengths (conforming/non-conforming)"
+    "- [X] Visualize link lengths (conforming/non-conforming)"
    ]
   },
   {
@@ -148,7 +148,7 @@
    "id": "1ce144b8-3de2-4dd1-85f2-f4a59489488e",
    "metadata": {},
    "source": [
-    "## Basic statistics: Links, face loops, etc"
+    "## Basic statistics: Links, face loops, max slopes, poi diversity"
    ]
   },
   {
@@ -160,13 +160,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33d837a2-53e5-4e4c-bf3d-83f89aa07c32",
+   "cell_type": "markdown",
+   "id": "fe3b38a9-ba3a-4f0d-8a87-2e02a662e6c4",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "list(np.linspace(0, 12, 25))"
+    "#### Distribution"
    ]
   },
   {
@@ -313,6 +311,14 @@
     "axes.set_ylim([0, 1.08 * axes.get_ylim()[1]])\n",
     "\n",
     "fig.savefig(PATH[\"plot\"] + \"linklengths\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c1b77e9-e33f-4f48-b42b-33367ca0618f",
+   "metadata": {},
+   "source": [
+    "#### Map with distribution"
    ]
   },
   {
@@ -553,17 +559,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0896969d-a526-4ee3-b1a9-133976984254",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "indmaxnodes = np.where(allloopnumnodes == LOOP_NUMNODE_BOUND - 1)[0]\n",
-    "len(indmaxnodes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "0dfab2c8-ef8e-473c-a861-c60623a5af84",
    "metadata": {
     "scrolled": true
@@ -696,7 +691,15 @@
    "id": "1c1a21a4-f724-4c30-8ce5-e9f55351c75f",
    "metadata": {},
    "source": [
-    "### Face loop lengths and nodes per face loop"
+    "### Face loop lengths"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf8dbef5-2268-4e4f-b4ae-04ebadf042d6",
+   "metadata": {},
+   "source": [
+    "#### Distribution"
    ]
   },
   {
@@ -848,7 +851,7 @@
    "id": "fd7ca9b7-e290-439b-b2eb-8408c3d34e20",
    "metadata": {},
    "source": [
-    "### Conforming and non-conforming face loops"
+    "#### Map with distribution"
    ]
   },
   {
