--- a/code/03_scenario_analysis.ipynb
+++ b/code/03_scenario_analysis.ipynb
@@ -22,7 +22,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-10-07  \n",
-    "Last modified: 2024-10-21"
+    "Last modified: 2024-10-23"
    ]
   },
   {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "fb810d3b-192d-47d8-8d62-d699be65bcad",
    "metadata": {},
    "outputs": [],
@@ -80,6 +80,30 @@
     "else:\n",
     "    logtextplot = \"\"\n",
     "    logtextsave = \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "9b986890-413c-43c3-a6fa-57ff87899f25",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Family with children',\n",
+       " 'maxslope_limit': 4,\n",
+       " 'looplength_min': 5000,\n",
+       " 'looplength_max': 20000}"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SCENARIO[0]"
    ]
   },
   {
@@ -195,13 +219,23 @@
     "axes = fig.add_axes([0.16, 0.16, 0.76, 0.75])\n",
     "\n",
     "histxy = axes.hist(linkmaxslopes, bins=[i / 4 for i in list(range(32))], density=False)\n",
-    "axes.plot([MAXSLOPE_LIMIT, MAXSLOPE_LIMIT], [0, max(histxy[0])], \":r\")\n",
+    "axes.plot(\n",
+    "    [SCENARIO[SCENARIOID][\"maxslope_limit\"], SCENARIO[SCENARIOID][\"maxslope_limit\"]],\n",
+    "    [0, max(histxy[0])],\n",
+    "    \":r\",\n",
+    ")\n",
     "axes.text(\n",
-    "    MAXSLOPE_LIMIT * 0.95,\n",
+    "    SCENARIO[SCENARIOID][\"maxslope_limit\"] * 0.95,\n",
     "    max(histxy[0]),\n",
     "    str(\n",
     "        round(\n",
-    "            len([i for i, x in enumerate(linkmaxslopes) if (x < MAXSLOPE_LIMIT)])\n",
+    "            len(\n",
+    "                [\n",
+    "                    i\n",
+    "                    for i, x in enumerate(linkmaxslopes)\n",
+    "                    if (x < SCENARIO[SCENARIOID][\"maxslope_limit\"])\n",
+    "                ]\n",
+    "            )\n",
     "            / len(linkmaxslopes)\n",
     "            * 100\n",
     "        )\n",
@@ -211,11 +245,17 @@
     "    verticalalignment=\"top\",\n",
     ")\n",
     "axes.text(\n",
-    "    MAXSLOPE_LIMIT * 1.05,\n",
+    "    SCENARIO[SCENARIOID][\"maxslope_limit\"] * 1.05,\n",
     "    max(histxy[0]),\n",
     "    str(\n",
     "        round(\n",
-    "            len([i for i, x in enumerate(linkmaxslopes) if (x >= MAXSLOPE_LIMIT)])\n",
+    "            len(\n",
+    "                [\n",
+    "                    i\n",
+    "                    for i, x in enumerate(linkmaxslopes)\n",
+    "                    if (x >= SCENARIO[SCENARIOID][\"maxslope_limit\"])\n",
+    "                ]\n",
+    "            )\n",
     "            / len(linkmaxslopes)\n",
     "            * 100\n",
     "        )\n",
@@ -230,7 +270,9 @@
     "axes.set_title(\"Link max slopes\")\n",
     "axes.set_xlim([0, 8])\n",
     "\n",
-    "fig.savefig(PATH[\"plot\"] + \"maxslopes_maxslope\" + str(MAXSLOPE_LIMIT))"
+    "fig.savefig(\n",
+    "    PATH[\"plot\"] + \"maxslopes_maxslope\" + str(SCENARIO[SCENARIOID][\"maxslope_limit\"])\n",
+    ")"
    ]
   },
   {
@@ -251,8 +293,8 @@
     "allloops_bound = {}\n",
     "for sourcenode in tqdm(allloops, desc=\"Restrict to scenario lengths\"):\n",
     "    lengths_this = allloops[sourcenode][\"lengths\"] * MPERUNIT\n",
-    "    mask_this = (lengths_this >= RESTRICTIONS[\"looplength_min\"]) & (\n",
-    "        lengths_this <= RESTRICTIONS[\"looplength_max\"]\n",
+    "    mask_this = (lengths_this >= SCENARIO[SCENARIOID][\"looplength_min\"]) & (\n",
+    "        lengths_this <= SCENARIO[SCENARIOID][\"looplength_max\"]\n",
     "    )\n",
     "    allloops_bound[sourcenode] = mask_node(allloops[sourcenode], mask_this)"
    ]
@@ -278,9 +320,9 @@
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
     "    + \"network_numloops_\"\n",
-    "    + str(RESTRICTIONS[\"looplength_min\"])\n",
+    "    + str(SCENARIO[SCENARIOID][\"looplength_min\"])\n",
     "    + \"to\"\n",
-    "    + str(RESTRICTIONS[\"looplength_max\"])\n",
+    "    + str(SCENARIO[SCENARIOID][\"looplength_max\"])\n",
     "    + logtextsave\n",
     ")"
    ]
@@ -306,9 +348,9 @@
     "    maxslopes_this = (\n",
     "        allloops[sourcenode][\"max_slopes\"] / 100.0\n",
     "    )  # max_slopes were multiplied by 100 for storage as uint16\n",
-    "    mask_this = lengths_this >= RESTRICTIONS[\"looplength_min\"]\n",
-    "    mask_this &= lengths_this <= RESTRICTIONS[\"looplength_max\"]\n",
-    "    mask_this &= maxslopes_this <= RESTRICTIONS[\"slope_max\"]\n",
+    "    mask_this = lengths_this >= SCENARIO[SCENARIOID][\"looplength_min\"]\n",
+    "    mask_this &= lengths_this <= SCENARIO[SCENARIOID][\"looplength_max\"]\n",
+    "    mask_this &= maxslopes_this <= SCENARIO[SCENARIOID][\"maxslope_limit\"]\n",
     "    allloops_bound[sourcenode] = mask_node(allloops[sourcenode], mask_this)"
    ]
   },
@@ -323,7 +365,7 @@
     "\n",
     "edge_colors = []\n",
     "for e in G.es:\n",
-    "    if e[\"max_slope\"] > RESTRICTIONS[\"slope_max\"]:\n",
+    "    if e[\"max_slope\"] > SCENARIO[SCENARIOID][\"maxslope_limit\"]:\n",
     "        edge_colors.append(\"red\")\n",
     "    else:\n",
     "        edge_colors.append(\"grey\")\n",
@@ -339,7 +381,7 @@
     "plt.text(\n",
     "    0,\n",
     "    0.12,\n",
-    "    \"Red: Gradient >\" + str(RESTRICTIONS[\"slope_max\"]) + \"%\",\n",
+    "    \"Red: Gradient >\" + str(SCENARIO[SCENARIOID][\"maxslope_limit\"]) + \"%\",\n",
     "    fontsize=8,\n",
     ")\n",
     "plt.text(0, 0.04, \"Max # of loops: \" + logtextplot + str(round(numloops_max, 2)))\n",
@@ -348,11 +390,11 @@
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
     "    + \"network_numloops_\"\n",
-    "    + str(RESTRICTIONS[\"looplength_min\"])\n",
+    "    + str(SCENARIO[SCENARIOID][\"looplength_min\"])\n",
     "    + \"to\"\n",
-    "    + str(RESTRICTIONS[\"looplength_max\"])\n",
+    "    + str(SCENARIO[SCENARIOID][\"looplength_max\"])\n",
     "    + \"_maxslope\"\n",
-    "    + str(RESTRICTIONS[\"slope_max\"])\n",
+    "    + str(SCENARIO[SCENARIOID][\"maxslope_limit\"])\n",
     "    + logtextsave\n",
     ")"
    ]
@@ -381,19 +423,15 @@
     "        water_enough = True\n",
     "        if wp:  # There is water on the way somewhere. Check distances\n",
     "            for w in wp:\n",
-    "                if w > RESTRICTIONS[\"waterlength_max\"]:\n",
+    "                if w > WATERLENGTH_MAX:\n",
     "                    water_enough = False\n",
     "                    break\n",
     "            if water_enough and (\n",
-    "                allloops_bound[sourcenode][\"lengths\"][i] - wp[-1]\n",
-    "                > RESTRICTIONS[\"waterlength_max\"]\n",
+    "                allloops_bound[sourcenode][\"lengths\"][i] - wp[-1] > WATERLENGTH_MAX\n",
     "            ):\n",
     "                water_enough = False\n",
     "        else:  # No water on the way, so the loop is only valid if short enough\n",
-    "            if (\n",
-    "                allloops_bound[sourcenode][\"lengths\"][i]\n",
-    "                > RESTRICTIONS[\"waterlength_max\"]\n",
-    "            ):\n",
+    "            if allloops_bound[sourcenode][\"lengths\"][i] > WATERLENGTH_MAX:\n",
     "                water_enough = False\n",
     "        mask_this[i] = water_enough\n",
     "    allloops_bound_watered[sourcenode] = mask_node(\n",
@@ -412,11 +450,13 @@
     "\n",
     "edge_colors = []\n",
     "for e in G.es:\n",
-    "    if e[\"max_slope\"] > RESTRICTIONS[\"slope_max\"]:  # and not e[\"has_water\"]:\n",
+    "    if (\n",
+    "        e[\"max_slope\"] > SCENARIO[SCENARIOID][\"maxslope_limit\"]\n",
+    "    ):  # and not e[\"has_water\"]:\n",
     "        edge_colors.append(\"red\")\n",
-    "    # elif e[\"max_slope\"] > RESTRICTIONS[\"slope_max\"] and e[\"has_water\"]:\n",
+    "    # elif e[\"max_slope\"] > SCENARIO[SCENARIOID][\"maxslope_limit\"] and e[\"has_water\"]:\n",
     "    #     edge_colors.append(\"orange\")\n",
-    "    elif e[\"max_slope\"] <= RESTRICTIONS[\"slope_max\"] and e[\"has_water\"]:\n",
+    "    elif e[\"max_slope\"] <= SCENARIO[SCENARIOID][\"maxslope_limit\"] and e[\"has_water\"]:\n",
     "        edge_colors.append(\"blue\")\n",
     "    else:\n",
     "        edge_colors.append(\"grey\")"
@@ -440,14 +480,14 @@
     "plt.text(\n",
     "    0,\n",
     "    0.17,\n",
-    "    \"Blue: Gradient <=\" + str(RESTRICTIONS[\"slope_max\"]) + \"% and water\",\n",
+    "    \"Blue: Gradient <=\" + str(SCENARIO[SCENARIOID][\"maxslope_limit\"]) + \"% and water\",\n",
     "    fontsize=8,\n",
     ")\n",
-    "# plt.text(0,0.17, \"Orange: Gradient >\"+ str(RESTRICTIONS[\"slope_max\"])+\"% and water\", fontsize=8);\n",
+    "# plt.text(0,0.17, \"Orange: Gradient >\"+ str(SCENARIO[SCENARIOID][\"maxslope_limit\"])+\"% and water\", fontsize=8);\n",
     "plt.text(\n",
     "    0,\n",
     "    0.12,\n",
-    "    \"Red: Gradient >\" + str(RESTRICTIONS[\"slope_max\"]) + \"%\",\n",
+    "    \"Red: Gradient >\" + str(SCENARIO[SCENARIOID][\"maxslope_limit\"]) + \"%\",\n",
     "    fontsize=8,\n",
     ")\n",
     "plt.text(0, 0.04, \"Max # of loops: \" + logtextplot + str(round(numloops_max, 2)))\n",
@@ -456,13 +496,13 @@
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
     "    + \"network_numloops_\"\n",
-    "    + str(RESTRICTIONS[\"looplength_min\"])\n",
+    "    + str(SCENARIO[SCENARIOID][\"looplength_min\"])\n",
     "    + \"to\"\n",
-    "    + str(RESTRICTIONS[\"looplength_max\"])\n",
+    "    + str(SCENARIO[SCENARIOID][\"looplength_max\"])\n",
     "    + \"_maxslope\"\n",
-    "    + str(RESTRICTIONS[\"slope_max\"])\n",
+    "    + str(SCENARIO[SCENARIOID][\"maxslope_limit\"])\n",
     "    + \"_waterlength_max\"\n",
-    "    + str(RESTRICTIONS[\"waterlength_max\"])\n",
+    "    + str(WATERLENGTH_MAX)\n",
     "    + logtextsave\n",
     ")"
    ]
@@ -506,12 +546,14 @@
     "\n",
     "edge_colors = []\n",
     "for e in G.es:\n",
-    "    if e[\"max_slope\"] > RESTRICTIONS[\"slope_max\"]:  # and not e[\"has_water\"]:\n",
+    "    if (\n",
+    "        e[\"max_slope\"] > SCENARIO[SCENARIOID][\"maxslope_limit\"]\n",
+    "    ):  # and not e[\"has_water\"]:\n",
     "        edge_colors.append(\"red\")\n",
-    "    # elif e[\"max_slope\"] > RESTRICTIONS[\"slope_max\"] and e[\"has_water\"]:\n",
+    "    # elif e[\"max_slope\"] > SCENARIO[SCENARIOID][\"maxslope_limit\"] and e[\"has_water\"]:\n",
     "    #     edge_colors.append(\"orange\")\n",
     "    elif (\n",
-    "        e[\"max_slope\"] <= RESTRICTIONS[\"slope_max\"]\n",
+    "        e[\"max_slope\"] <= SCENARIO[SCENARIOID][\"maxslope_limit\"]\n",
     "        and e[\"has_water\"]\n",
     "        and e[\"poi_diversity\"] >= 3\n",
     "    ):\n",
@@ -540,14 +582,16 @@
     "plt.text(\n",
     "    0,\n",
     "    0.17,\n",
-    "    \"Blue: Gradient <=\" + str(RESTRICTIONS[\"slope_max\"]) + \"% and water and diverse\",\n",
+    "    \"Blue: Gradient <=\"\n",
+    "    + str(SCENARIO[SCENARIOID][\"maxslope_limit\"])\n",
+    "    + \"% and water and diverse\",\n",
     "    fontsize=8,\n",
     ")\n",
-    "# plt.text(0,0.17, \"Orange: Gradient >\"+ str(RESTRICTIONS[\"slope_max\"])+\"% and water\", fontsize=8);\n",
+    "# plt.text(0,0.17, \"Orange: Gradient >\"+ str(SCENARIO[SCENARIOID][\"maxslope_limit\"])+\"% and water\", fontsize=8);\n",
     "plt.text(\n",
     "    0,\n",
     "    0.12,\n",
-    "    \"Red: Gradient >\" + str(RESTRICTIONS[\"slope_max\"]) + \"%\",\n",
+    "    \"Red: Gradient >\" + str(SCENARIO[SCENARIOID][\"maxslope_limit\"]) + \"%\",\n",
     "    fontsize=8,\n",
     ")\n",
     "plt.text(0, 0.04, \"Max # of loops: \" + logtextplot + str(round(numloops_max, 2)))\n",
@@ -556,13 +600,13 @@
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
     "    + \"network_numloops_\"\n",
-    "    + str(RESTRICTIONS[\"looplength_min\"])\n",
+    "    + str(SCENARIO[SCENARIOID][\"looplength_min\"])\n",
     "    + \"to\"\n",
-    "    + str(RESTRICTIONS[\"looplength_max\"])\n",
+    "    + str(SCENARIO[SCENARIOID][\"looplength_max\"])\n",
     "    + \"_maxslope\"\n",
-    "    + str(RESTRICTIONS[\"slope_max\"])\n",
+    "    + str(SCENARIO[SCENARIOID][\"maxslope_limit\"])\n",
     "    + \"_waterlength_max\"\n",
-    "    + str(RESTRICTIONS[\"waterlength_max\"])\n",
+    "    + str(WATERLENGTH_MAX)\n",
     "    + \"_poidiversity3\"\n",
     "    + logtextsave\n",
     ")"
