Add maxslope plot

--- a/code/02DK_basic_statistics.ipynb
+++ b/code/02DK_basic_statistics.ipynb
@@ -1031,6 +1031,200 @@
     "\n",
     "fig.savefig(PATH[\"plot\"] + \"faceloops\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2cee658-262e-4ab7-96eb-142f9f531672",
+   "metadata": {},
+   "source": [
+    "### Max slopes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d33900a3-ba8a-4a00-ae0a-7a024c7d5603",
+   "metadata": {},
+   "source": [
+    "#### Map with distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbcc20f6-839a-4cab-9390-f2279cef892b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adapted from: scripts/script05.py\n",
+    "# in https://github.com/anastassiavybornova/bike-node-planner\n",
+    "\n",
+    "# using momepy to get nodes and edges gdf with corresponding labels and geometry objects\n",
+    "nodes, edges = momepy.nx_to_gdf(net=Gnx, points=True, lines=True)\n",
+    "\n",
+    "### Classify edge slopes (in %)\n",
+    "\n",
+    "edges[\"maxslope_class\"] = edges.max_slope.apply(\n",
+    "    lambda x: classify_maxslope(\n",
+    "        maxslope=x,\n",
+    "        maxslope_medium=SCENARIO[0][\"maxslope_limit\"],\n",
+    "        maxslope_hard=SCENARIO[1][\"maxslope_limit\"],\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "edges.to_file(PATH[\"data_out\"] + f\"edges_maxslope_classification.gpkg\", index=False)\n",
+    "\n",
+    "for classification in edges.maxslope_class.unique():\n",
+    "    fp = PATH[\"data_out\"] + f\"edges_{classification}.gpkg\"\n",
+    "    edges[edges[\"maxslope_class\"] == classification].to_file(fp, index=False)\n",
+    "\n",
+    "\n",
+    "fig = plt.figure(\n",
+    "    figsize=(640 / PLOTPARAM[\"dpi\"], 760 / PLOTPARAM[\"dpi\"]), dpi=PLOTPARAM[\"dpi\"]\n",
+    ")\n",
+    "ax = fig.add_axes(\n",
+    "    [-0.03, -0.03, 1.06, 1.06]\n",
+    ")  # negative because plot() introduces a padding\n",
+    "\n",
+    "for classification in edges.maxslope_class.unique():\n",
+    "    df = gpd.read_file(PATH[\"data_out\"] + f\"edges_{classification}.gpkg\")\n",
+    "    df.plot(\n",
+    "        ax=ax,\n",
+    "        color=PLOTPARAM[\"maxslope_classification_colors\"][classification],\n",
+    "        aspect=1,\n",
+    "        linewidth=PLOTPARAM[\"maxslope_classification_linewidths\"][classification],\n",
+    "    )\n",
+    "ax.set_axis_off()\n",
+    "\n",
+    "xmax = 8\n",
+    "axes = fig.add_axes([0.64, 0.69, 0.31, 0.25])\n",
+    "maxslopes = [e[\"max_slope\"] for e in G.es]\n",
+    "\n",
+    "N, bins, patches = axes.hist(\n",
+    "    maxslopes,\n",
+    "    bins=list(np.linspace(0, xmax, 4 * xmax + 1)),\n",
+    "    density=False,\n",
+    "    linewidth=0,\n",
+    ")\n",
+    "\n",
+    "# Source: https://stackoverflow.com/a/49290555\n",
+    "for i in range(0, 4 * SCENARIO[0][\"maxslope_limit\"]):\n",
+    "    patches[i].set_facecolor(PLOTPARAM[\"maxslope_classification_colors\"][\"easy\"])\n",
+    "for i in range(4 * SCENARIO[0][\"maxslope_limit\"], 4 * SCENARIO[1][\"maxslope_limit\"]):\n",
+    "    patches[i].set_facecolor(PLOTPARAM[\"maxslope_classification_colors\"][\"medium\"])\n",
+    "for i in range(4 * SCENARIO[1][\"maxslope_limit\"], len(patches)):\n",
+    "    patches[i].set_facecolor(PLOTPARAM[\"maxslope_classification_colors\"][\"hard\"])\n",
+    "\n",
+    "axes.set_xlabel(\"Maximum gradient [%]\")\n",
+    "axes.set_ylabel(\"Frequency\")\n",
+    "axes.set_title(\"Maximum gradients\")\n",
+    "axes.text(\n",
+    "    (SCENARIO[0][\"maxslope_limit\"] + SCENARIO[1][\"maxslope_limit\"]) / 2,\n",
+    "    max(N) * 1.1,\n",
+    "    \"Medium\",\n",
+    "    horizontalalignment=\"center\",\n",
+    "    verticalalignment=\"top\",\n",
+    "    color=lighten_color(PLOTPARAM[\"maxslope_classification_colors\"][\"medium\"], 3),\n",
+    "    fontsize=9,\n",
+    ")\n",
+    "axes.text(\n",
+    "    (SCENARIO[0][\"maxslope_limit\"] + SCENARIO[1][\"maxslope_limit\"]) / 2,\n",
+    "    max(N) * 0.1,\n",
+    "    str(\n",
+    "        round(\n",
+    "            len(\n",
+    "                [\n",
+    "                    i\n",
+    "                    for i, x in enumerate(maxslopes)\n",
+    "                    if (\n",
+    "                        x >= SCENARIO[0][\"maxslope_limit\"]\n",
+    "                        and x <= SCENARIO[1][\"maxslope_limit\"]\n",
+    "                    )\n",
+    "                ]\n",
+    "            )\n",
+    "            / len(linklengths)\n",
+    "            * 100\n",
+    "        )\n",
+    "    )\n",
+    "    + \"%\",\n",
+    "    horizontalalignment=\"center\",\n",
+    "    verticalalignment=\"top\",\n",
+    "    color=lighten_color(PLOTPARAM[\"maxslope_classification_colors\"][\"medium\"], 3),\n",
+    ")\n",
+    "axes.text(\n",
+    "    SCENARIO[0][\"maxslope_limit\"] * 0.5,\n",
+    "    max(N) * 1.1,\n",
+    "    \"Easy\",\n",
+    "    horizontalalignment=\"center\",\n",
+    "    verticalalignment=\"top\",\n",
+    "    color=lighten_color(PLOTPARAM[\"maxslope_classification_colors\"][\"easy\"], 5),\n",
+    "    fontsize=9,\n",
+    ")\n",
+    "axes.text(\n",
+    "    SCENARIO[0][\"maxslope_limit\"] * 0.5,\n",
+    "    max(N) * 0.1,\n",
+    "    str(\n",
+    "        round(\n",
+    "            len(\n",
+    "                [\n",
+    "                    i\n",
+    "                    for i, x in enumerate(maxslopes)\n",
+    "                    if (x <= SCENARIO[0][\"maxslope_limit\"])\n",
+    "                ]\n",
+    "            )\n",
+    "            / len(linklengths)\n",
+    "            * 100\n",
+    "        )\n",
+    "    )\n",
+    "    + \"%\",\n",
+    "    horizontalalignment=\"center\",\n",
+    "    verticalalignment=\"top\",\n",
+    "    color=lighten_color(PLOTPARAM[\"maxslope_classification_colors\"][\"easy\"], 5),\n",
+    ")\n",
+    "axes.text(\n",
+    "    (SCENARIO[1][\"maxslope_limit\"] + xmax) / 2,\n",
+    "    max(N) * 1.1,\n",
+    "    \"Hard\",\n",
+    "    horizontalalignment=\"center\",\n",
+    "    verticalalignment=\"top\",\n",
+    "    color=lighten_color(PLOTPARAM[\"maxslope_classification_colors\"][\"hard\"], 2.2),\n",
+    "    fontsize=9,\n",
+    ")\n",
+    "axes.text(\n",
+    "    (SCENARIO[1][\"maxslope_limit\"] + xmax) / 2,\n",
+    "    max(N) * 0.1,\n",
+    "    str(\n",
+    "        round(\n",
+    "            len(\n",
+    "                [\n",
+    "                    i\n",
+    "                    for i, x in enumerate(maxslopes)\n",
+    "                    if (x > SCENARIO[1][\"maxslope_limit\"])\n",
+    "                ]\n",
+    "            )\n",
+    "            / len(linklengths)\n",
+    "            * 100\n",
+    "        )\n",
+    "    )\n",
+    "    + \"%\",\n",
+    "    horizontalalignment=\"center\",\n",
+    "    verticalalignment=\"top\",\n",
+    "    color=lighten_color(PLOTPARAM[\"maxslope_classification_colors\"][\"hard\"], 2.2),\n",
+    ")\n",
+    "\n",
+    "axes.set_xticks(list(range(xmax + 1)))\n",
+    "axes.set_xlim([0, xmax])\n",
+    "axes.set_ylim([0, 1.08 * axes.get_ylim()[1]])\n",
+    "\n",
+    "fig.savefig(PATH[\"plot\"] + \"maxslopes\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a951a8a-093c-408e-a05c-9fa28bcc5513",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
