Add poi diversity plot

--- a/code/02DK_basic_statistics.ipynb
+++ b/code/02DK_basic_statistics.ipynb
@@ -1219,12 +1219,152 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c3e870f9-40e5-418e-a7d5-2f9a464d0636",
+   "metadata": {},
+   "source": [
+    "### POI Diversity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "206b1f97-05fe-45a5-bb1f-1c0222289365",
+   "metadata": {},
+   "source": [
+    "#### Map with distribution"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a951a8a-093c-408e-a05c-9fa28bcc5513",
+   "id": "89403c9f-603f-40a1-af75-6ce3c555a54a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b89122a1-511c-469f-82e4-941996db4706",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adapted from: scripts/script05.py\n",
+    "# in https://github.com/anastassiavybornova/bike-node-planner\n",
+    "\n",
+    "# using momepy to get nodes and edges gdf with corresponding labels and geometry objects\n",
+    "nodes, edges = momepy.nx_to_gdf(net=Gnx, points=True, lines=True)\n",
+    "\n",
+    "for classification in edges.poi_diversity.unique():\n",
+    "    fp = PATH[\"data_out\"] + f\"edges_poidiversity{classification}.gpkg\"\n",
+    "    edges[edges[\"poi_diversity\"] == classification].to_file(fp, index=False)\n",
+    "\n",
+    "\n",
+    "fig = plt.figure(\n",
+    "    figsize=(640 / PLOTPARAM[\"dpi\"], 760 / PLOTPARAM[\"dpi\"]), dpi=PLOTPARAM[\"dpi\"]\n",
+    ")\n",
+    "ax = fig.add_axes(\n",
+    "    [-0.03, -0.03, 1.06, 1.06]\n",
+    ")  # negative because plot() introduces a padding\n",
+    "\n",
+    "for classification in edges.poi_diversity.unique():\n",
+    "    df = gpd.read_file(PATH[\"data_out\"] + f\"edges_poidiversity{classification}.gpkg\")\n",
+    "    df.plot(\n",
+    "        ax=ax,\n",
+    "        color=PLOTPARAM[\"poidiversity_classification_colors\"][classification],\n",
+    "        aspect=1,\n",
+    "        linewidth=PLOTPARAM[\"poidiversity_classification_linewidths\"][classification],\n",
+    "    )\n",
+    "ax.set_axis_off()\n",
+    "\n",
+    "xmax = 3\n",
+    "axes = fig.add_axes([0.64, 0.69, 0.31, 0.25])\n",
+    "poidiversities = [e[\"poi_diversity\"] for e in G.es]\n",
+    "\n",
+    "N, bins, patches = axes.hist(\n",
+    "    poidiversities,\n",
+    "    bins=list(np.linspace(0, xmax + 1, xmax + 2)),\n",
+    "    density=False,\n",
+    "    linewidth=0,\n",
+    ")\n",
+    "\n",
+    "# Source: https://stackoverflow.com/a/49290555\n",
+    "\n",
+    "for i in range(3):\n",
+    "    patches[i].set_facecolor(PLOTPARAM[\"poidiversity_classification_colors\"][i])\n",
+    "\n",
+    "axes.set_xlabel(\"POI Diversity\")\n",
+    "axes.set_ylabel(\"Frequency\")\n",
+    "axes.set_title(\"POI Diversities\")\n",
+    "axes.text(\n",
+    "    0.5,\n",
+    "    max(N) * 0.1,\n",
+    "    str(\n",
+    "        round(\n",
+    "            len([i for i, x in enumerate(poidiversities) if (x == 0)])\n",
+    "            / len(poidiversities)\n",
+    "            * 100\n",
+    "        )\n",
+    "    )\n",
+    "    + \"%\",\n",
+    "    horizontalalignment=\"center\",\n",
+    "    verticalalignment=\"top\",\n",
+    "    color=lighten_color(PLOTPARAM[\"poidiversity_classification_colors\"][0], 2.2),\n",
+    ")\n",
+    "axes.text(\n",
+    "    1.5,\n",
+    "    max(N) * 0.1,\n",
+    "    str(\n",
+    "        round(\n",
+    "            len([i for i, x in enumerate(poidiversities) if (x == 1)])\n",
+    "            / len(poidiversities)\n",
+    "            * 100\n",
+    "        )\n",
+    "    )\n",
+    "    + \"%\",\n",
+    "    horizontalalignment=\"center\",\n",
+    "    verticalalignment=\"top\",\n",
+    "    color=lighten_color(PLOTPARAM[\"poidiversity_classification_colors\"][1], 2),\n",
+    ")\n",
+    "axes.text(\n",
+    "    2.5,\n",
+    "    max(N) * 0.1,\n",
+    "    str(\n",
+    "        round(\n",
+    "            len([i for i, x in enumerate(poidiversities) if (x == 2)])\n",
+    "            / len(poidiversities)\n",
+    "            * 100\n",
+    "        )\n",
+    "    )\n",
+    "    + \"%\",\n",
+    "    horizontalalignment=\"center\",\n",
+    "    verticalalignment=\"top\",\n",
+    "    color=lighten_color(PLOTPARAM[\"poidiversity_classification_colors\"][2], 2),\n",
+    ")\n",
+    "axes.text(\n",
+    "    3.5,\n",
+    "    max(N) * 0.1,\n",
+    "    str(\n",
+    "        round(\n",
+    "            len([i for i, x in enumerate(poidiversities) if (x == 3)])\n",
+    "            / len(poidiversities)\n",
+    "            * 100\n",
+    "        )\n",
+    "    )\n",
+    "    + \"%\",\n",
+    "    horizontalalignment=\"center\",\n",
+    "    verticalalignment=\"top\",\n",
+    "    color=lighten_color(PLOTPARAM[\"poidiversity_classification_colors\"][3], 2),\n",
+    ")\n",
+    "\n",
+    "axes.set_xticks([0.5, 1.5, 2.5, 3.5])\n",
+    "axes.set_xticklabels([0, 1, 2, 3])\n",
+    "axes.set_xlim([0, xmax + 1])\n",
+    "\n",
+    "fig.savefig(PATH[\"plot\"] + \"poidiversities\")"
+   ]
   }
  ],
  "metadata": {
