Update todos, slight polish

--- a/code/02DK_basic_statistics.ipynb
+++ b/code/02DK_basic_statistics.ipynb
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-29  \n",
-    "Last modified: 2024-10-23"
+    "Last modified: 2024-10-25"
    ]
   },
   {
@@ -30,7 +30,9 @@
     "## To do\n",
     "- [X] Plot avg/median loop length per node: network, distribution (for all scenarios)\n",
     "- [X] Plot distrib of length of loops that have nodes == loop_numnode_bound. To see whether we should increase the bound.\n",
-    "- [X] Visualize link lengths (conforming/non-conforming)"
+    "- [X] Visualize link lengths (conforming/non-conforming)\n",
+    "- [ ] Possibly refactor plotting code cells as one function\n",
+    "- [ ] Correlations between all basic properties, especially: faceloop length vs avgslope, link length vs max/avgslope"
    ]
   },
   {
