--- a/code/03_scenario_analysis.ipynb
+++ b/code/03_scenario_analysis.ipynb
@@ -22,7 +22,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-10-07  \n",
-    "Last modified: 2024-10-23"
+    "Last modified: 2024-10-25"
    ]
   },
   {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "fb810d3b-192d-47d8-8d62-d699be65bcad",
    "metadata": {},
    "outputs": [],
@@ -84,26 +84,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "9b986890-413c-43c3-a6fa-57ff87899f25",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': 'Family with children',\n",
-       " 'maxslope_limit': 4,\n",
-       " 'looplength_min': 5000,\n",
-       " 'looplength_max': 20000}"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "SCENARIO[0]"
+    "print(\"Running scenario:\")\n",
+    "for k, v in SCENARIO[SCENARIOID].items():\n",
+    "    print(k + \": \" + str(v))"
    ]
   },
   {
