Add 03DK (first step)

--- a/code/01DK_create_loops.ipynb
+++ b/code/01DK_create_loops.ipynb
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-24  \n",
-    "Last modified: 2024-10-22"
+    "Last modified: 2024-10-25"
    ]
   },
   {
@@ -286,7 +286,7 @@
     "for c in tqdm(allloops_generator, desc=\"Generate all loops\"):\n",
     "    sourcenode = c[0]\n",
     "    c_length = get_loop_length(c)\n",
-    "    # LOOP_LENGTH_BOUND is False for no limit, or a number (meters)\n",
+    "    # LOOP_LENGTH_BOUND is 0 for no limit, or a number (meters)\n",
     "    if not LOOP_LENGTH_BOUND or c_length * MPERUNIT <= LOOP_LENGTH_BOUND:\n",
     "        c_max_slope = get_loop_max_slope(c)\n",
     "        c_water = get_loop_water_profile(c)\n",
