--- a/code/03DK_scenario_analysis.ipynb
+++ b/code/03DK_scenario_analysis.ipynb
@@ -5,7 +5,7 @@
    "id": "2e582dfd",
    "metadata": {},
    "source": [
-    "# 03. Scenario analysis\n",
+    "# 03DK. Scenario analysis, Denmark-wide\n",
     "## Project: Bicycle node network loop analysis"
    ]
   },
@@ -14,14 +14,14 @@
    "id": "2bc9b960",
    "metadata": {},
    "source": [
-    "This notebook analyses loops created in notebook 01 with different scenarios.  \n",
+    "This notebook analyses loops created in notebook 01 with different scenarios for the whole country of Denmark.  \n",
     "Explore two scenarios:  \n",
     "1. Family with small children: 5-20km, max slope 4%\n",
     "1. Teenage/adult leisure cyclist: 10-40km, max slope 6%\n",
     "\n",
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
-    "Created: 2024-10-07  \n",
+    "Created: 2024-10-25  \n",
     "Last modified: 2024-10-25"
    ]
   },
@@ -70,21 +70,18 @@
    "source": [
     "%run -i setup_parameters.py\n",
     "load_data = True  # Set to False if data are huge and have already been loaded\n",
-    "debug = True  # Set to True for extra plots and verbosity\n",
-    "\n",
-    "if PLOTLOGSCALE:\n",
-    "    logtextplot = \"2^\"\n",
-    "    logtextsave = \"_logscale\"\n",
-    "else:\n",
-    "    logtextplot = \"\"\n",
-    "    logtextsave = \"\""
+    "debug = True  # Set to True for extra plots and verbosity"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "9b986890-413c-43c3-a6fa-57ff87899f25",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "print(\"Running scenario in \" + STUDY_AREA)\n",
@@ -151,7 +148,7 @@
     "        alllooplengths = pickle.load(f)\n",
     "        allloopnumnodes = pickle.load(f)\n",
     "        allloopmaxslopes = pickle.load(f)\n",
-    "        G = pickle.load(f)\n",
+    "        Gnx = pickle.load(f)\n",
     "        LOOP_NUMNODE_BOUND = pickle.load(f)\n",
     "        nodes_id = pickle.load(f)\n",
     "        nodes_coords = pickle.load(f)\n",
@@ -162,19 +159,70 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f13c5935",
+   "id": "ecf416d7-1583-4ab0-be0c-869669186190",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot to double-check\n",
+    "# Create gdf and igraph versions\n",
+    "nodes, edges = momepy.nx_to_gdf(net=Gnx, points=True, lines=True)\n",
+    "G = ig.Graph.from_networkx(Gnx)\n",
+    "G.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ce8dbb6-4a98-49f7-a326-05a14d1aa8b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot network\n",
     "if debug:\n",
-    "    plot_check(\n",
-    "        G,\n",
-    "        nodes_id,\n",
-    "        nodes_coords,\n",
+    "    plot_dk_gdf(\n",
+    "        nodes,\n",
+    "        edges,\n",
+    "        scale=0.4,\n",
     "        vertex_size=get_vertex_size_constant(G.vcount()),\n",
-    "        edge_width=get_edgewidth_constant(G.ecount()),\n",
+    "        link_width=get_edgewidth_constant(G.ecount()),\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b38cb593-9592-4296-bab5-764260c6666e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if debug:\n",
+    "    print(len(nodes), len(allloops))\n",
+    "if len(nodes) > len(allloops):  # Some nodes have no loops. Add them to allloops\n",
+    "    for i in range(len(list(nodes.index))):\n",
+    "        if i not in allloops:\n",
+    "            allloops[i] = {}\n",
+    "            print(\"Node \" + str(i) + \" has no loops\")\n",
+    "    print(\"Fixed\", len(nodes), len(allloops))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14580a92-4d3b-45df-8c0b-0152f3224923",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot all loops\n",
+    "%run -i functions.py\n",
+    "vertex_sizes, vertex_colors = get_vertex_plotinfo(allloops, max_node_size=100)\n",
+    "plot_dk_gdf(\n",
+    "    nodes,\n",
+    "    edges,\n",
+    "    scale=1,\n",
+    "    vertex_size=vertex_sizes,\n",
+    "    vertex_color=vertex_colors,\n",
+    "    link_width=0.3,\n",
+    "    link_color=\"#666666\",\n",
+    ")"
    ]
   },
   {
