Polish get_vertex_plotinfo

--- a/code/03DK_scenario_analysis.ipynb
+++ b/code/03DK_scenario_analysis.ipynb
@@ -214,15 +214,16 @@
     "# Plot all loops\n",
     "%run -i functions.py\n",
     "vertex_sizes, vertex_colors = get_vertex_plotinfo(allloops, max_node_size=100)\n",
-    "plot_dk_gdf(\n",
+    "fig = plot_dk_gdf(\n",
     "    nodes,\n",
     "    edges,\n",
     "    scale=1,\n",
     "    vertex_size=vertex_sizes,\n",
     "    vertex_color=vertex_colors,\n",
     "    link_width=0.3,\n",
-    "    link_color=\"#666666\",\n",
-    ")"
+    "    link_color=\"#444444\",\n",
+    ")\n",
+    "fig.savefig(PATH[\"plot\"] + \"network_numloops_all\")"
    ]
   },
   {
